--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -18,6 +18,10 @@ h1 {
 
 }
 
+h1 a {
+    color: black;
+    text-decoration: none;
+}
 @font-face {font-family: "BillabongW00-Regular";
     src: url("//db.onlinewebfonts.com/t/6d32b8e06f40fb7698cfb714b9e7975d.eot");
     src: url("//db.onlinewebfonts.com/t/6d32b8e06f40fb7698cfb714b9e7975d.eot?#iefix") format("embedded-opentype"),
