--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -111,3 +111,21 @@ button {
 button:hover{
     border-color: blue;
 }
+
+.comment-count {
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+}
+
+.loader {
+    height: 20%;
+    width: 100%;
+    display: flex;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+    font-size: 28pt;
+}
