--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -22,6 +22,11 @@ h1 a {
     color: black;
     text-decoration: none;
 }
+
+h1 a:focus {
+    outline: 0;
+}
+
 @font-face {font-family: "BillabongW00-Regular";
     src: url("//db.onlinewebfonts.com/t/6d32b8e06f40fb7698cfb714b9e7975d.eot");
     src: url("//db.onlinewebfonts.com/t/6d32b8e06f40fb7698cfb714b9e7975d.eot?#iefix") format("embedded-opentype"),
@@ -29,6 +34,10 @@ h1 a {
     url("//db.onlinewebfonts.com/t/6d32b8e06f40fb7698cfb714b9e7975d.woff") format("woff"),
     url("//db.onlinewebfonts.com/t/6d32b8e06f40fb7698cfb714b9e7975d.ttf") format("truetype"),
     url("//db.onlinewebfonts.com/t/6d32b8e06f40fb7698cfb714b9e7975d.svg#BillabongW00-Regular") format("svg");
+}
+
+body {
+    background: offwhite;
 }
 
 .photoGrid {
@@ -45,6 +54,41 @@ h1 a {
     padding: 2rem;
     flex-grow: 1;
     margin: 0 2rem 2rem 2rem;
+}
+.figure .single-photo {
+    flex-basis: calc(33.333% - 5rem);
+    flex-grow: 1;
+    flex-shrink: 0;
+    margin: 0 2rem 2rem 2rem;
+    padding: 2rem;
+    border: 1px solid #d3d3d3;
+    background: #fff;
+    position: relative;
+}
+
+.single-photo {
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    background: #fff;
+    border: black;
+}
+
+.single-photo .figure {
+    box-shadow: none;
+    margin: 0 2rem 0 0 ;
+    border: 0;
+    padding: 0;
+    max-width: 60%;
+}
+
+.single-photo .comments {
+    flex: 1 0 40%;
+    max-width: 40%;
+}
+.single-photo .photo {
+    width: 1005;
+    margin: 0;
 }
 
 .photo {
@@ -84,6 +128,29 @@ button {
     border: 2p solid #f2f2f2;
     line-height: 2;
     padding: 5px;
+}
+
+button, .button {
+    border: 2px solid #f2f2f2;
+    background: none;
+    flex-basis: 48%;
+    display: inline-block;
+    line-height: 2;
+    text-decoration: none;
+    padding: 5px;
+    color: red;
+    transition: all 0.2s;
+    box-sizing: padding-box;
+}
+
+
+button:hover{
+    border-color: blue;
+}
+
+button:hover, .button:hover, button:focus, .button.focus {
+    border-color: #00f;
+    outline:0;
 }
 
 .addIcon {
@@ -127,10 +194,7 @@ button {
 .form button:hover {
     background: #7b8589;
 }
-
-button:hover{
-    border-color: blue;
-}
+ 
 
 .comment-count {
     margin: 0 auto;
