--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -197,7 +197,15 @@ button:hover, .button:hover, button:focus, .button.focus {
     background: #7b8589;
 }
  
-
+.speech-bubble {
+    background: url("https://d30y9cdsu7xlg0.cloudfront.net/png/51904-200.png") center no-repeat;
+    background-size: contain;
+    padding: 10px;
+    margin: 5px;
+    display: inline-block;
+    border: none;
+    position: relative;
+}
 .comment-count {
     margin: 0 auto;
     display: flex;
